--- a/src/sil.rc
+++ b/src/sil.rc
@@ -103,12 +103,10 @@ ANGBAND MENU
 
 	POPUP "&Options"
 	{
-		POPUP "&Graphics (not working yet)"
+		POPUP "&Graphics"
 		{
 			MENUITEM "&None", 400
-			MENUITEM "&Old tiles", 401
-			MENUITEM "&Adam Bolt's tiles", 402
-			MENUITEM "&David Gervais' tiles", 403
+			MENUITEM "&Microchasm tiles", 402
 			MENUITEM "&Bigtile mode", 409
 		}
 
